@startuml
skinparam classAttributeIconSize 0

abstract Obstacle {
    +{abstract} desc(): String

}

class FlyingObstacle{
-flyObs: FlyingObstacleType;
}

class GroundObstacle{
  -groundObs: GroundObstacleType;
}

enum FlyingObstacleType {
    BIRD
    CLOUD
    BULLET


}

enum GroundObstacleType {
    SPIKE
    FENCE
    HOLE
    BOX


}


Obstacle <|-- FlyingObstacle

Obstacle <|-- GroundObstacle

FlyingObstacle <-- FlyingObstacleType

GroundObstacle <-- GroundObstacleType




@enduml